syntax = "proto3";

import 'common.proto';

service postService
{
  rpc getAllPosts(Empty) returns (AllPosts);
  rpc createPost(PostCreationGrpcDto) returns(PostReadGrpcDto);
  rpc getPostById(GenericMessage)returns(PostReadGrpcDto);
  rpc updatePost(PostReadGrpcDto) returns(GenericMessage);
  rpc deletePost(GenericMessage)returns(GenericMessage);

  //we send the id of the post and get back the category its in as plaintext
  rpc getCategoryByPostId(GenericMessage)returns(CategoryReadGrpcDto);
  rpc getAllCategories(Empty)returns(CategoriesGrpc);
  rpc createCategory(CategoryCreationGrpcDto)returns(CategoryReadGrpcDto);
  rpc deleteCategory(GenericMessage) returns(GenericMessage);
}


message PostCreationGrpcDto
{
  string description = 1;
  string location = 2;
  int32 categories = 3;
  int32 ownerId = 4;
  string picture = 5;
  int32 price = 6;
  string title = 7;
}

message PostReadGrpcDto
{
  int32 id = 1;
  int32 creationDate = 2;
  string description = 3;
  string location = 4;
  int32 categories = 5;
  int32 ownerId = 6;
  string picture = 7;
  int32 price = 8;
  string title = 9;
  int32 status=10;
}

message AllPosts
{
  repeated PostReadGrpcDto post = 1;
}

message CategoryReadGrpcDto
{
  int32 id = 1;
  string description = 2;
}
message CategoryCreationGrpcDto
{
  string description = 3;
}
message CategoriesGrpc
{
  repeated CategoryReadGrpcDto categories = 1;
}